# mouse-echo-neural-net

./: .dockerignore  .gitignore  Dockerfile  Echo_Segmenter_UI_Full.py  README.MD  echoanalysis_main.py  echoanalysis_mmode_main.py  menn_cli.py  menn_web.py  preprocessing_modes.py  pyproject.toml  util_bmode.py  util_mmode.py  util_nn_bmode.py  util_nn_mmode.py
